--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     font-family: 'Alkatra', cursive;
     font-family: 'Josefin Sans', sans-serif;
     font-family: 'Roboto', sans-serif;
-    background-color:darksalmon;
+    background-color:black;
 }
 .head{
     font-size: 40px;
@@ -81,5 +81,32 @@ nav a:hover{
     background-color: darkgreen;
 }
 p{
-    padding-bottom: 10px;
+    padding-bottom: 10px ;
+}
+.about{
+    
+    margin: 50px 0;
+    background-color: antiquewhite;
+    padding: 80px;
+}
+.section_title{
+font-size: 30px;
+text-align: center;
+}
+.section_pera{
+    font-size: 25px;
+    text-align: center;
+}
+main{
+    width: 1000px;
+    margin: 0 auto;
+}
+.continer{
+    display: flex;
+    justify-content: space-around;
+    
+}
+.about-info{
+    text-align: center;
+
 }
