--- a/style.css
+++ b/style.css
@@ -98,8 +98,9 @@ text-align: center;
     text-align: center;
 }
 main{
-    width: 1000px;
     margin: 0 auto;
+    width: 1400px;
+    
 }
 .continer{
     display: flex;
@@ -109,4 +110,18 @@ main{
 .about-info{
     text-align: center;
 
+}
+.picture2{
+    width: 400px;
+    margin-right: 30px;
+}
+.full{
+    display: flex;
+
+}
+.me{
+    color: darkred;
+}
+.ab{
+    color: darkmagenta;
 }
