--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ main{
 .picture2{
     width: 400px;
     margin-right: 30px;
+    border-radius: 100%;
 }
 .full{
     display: flex;
@@ -125,3 +126,46 @@ main{
 .ab{
     color: darkmagenta;
 }
+
+    
+    
+
+.about2{
+    
+    margin: 50px 0;
+    padding: 80px;
+    color: white;
+    
+}
+.skill{
+    display: flex;
+    gap: 20px;
+    
+    
+    
+    
+}
+.java{
+text-align: center;
+padding: 20px;
+
+background-color: darkslategray;
+box-shadow: 10px 10px 10px darkmagenta;
+
+}
+.pera-java{
+    padding: 30px;
+}
+
+.resume{
+    color: white;
+}
+.title2{
+    text-align: center;
+}
+.resume-container{
+    display: flex;
+    gap: 100px;
+    text-align: center;
+}
+
