--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ p{
     margin: 50px 0;
     background-color: antiquewhite;
     padding: 80px;
+    
 }
 .section_title{
 font-size: 30px;
@@ -135,7 +136,8 @@ main{
     margin: 50px 0;
     padding: 80px;
     color: white;
-    
+    background-color: darkcyan;
+    box-shadow: 10px  10px 10px  ;
 }
 .skill{
     display: flex;
@@ -159,6 +161,10 @@ box-shadow: 10px 10px 10px darkmagenta;
 
 .resume{
     color: white;
+    background-color: darkslategray;
+    margin: 50px 0;
+    padding: 80px;
+    box-shadow:  10px  10px 10px ;
 }
 .title2{
     text-align: center;
@@ -168,4 +174,66 @@ box-shadow: 10px 10px 10px darkmagenta;
     gap: 100px;
     text-align: center;
 }
+.container-foot{
+    color: white;
+    display: flex;
+    gap: 30px;
+    margin: 50px 0;
+    padding: 80px;
 
+
+}
+.social {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+ .icon{
+    width: 50px;
+    margin-right: 30px;  
+}
+.connect-pera{
+    width: 50%;
+}
+.form input,textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 15px 25px;
+    border: 0;
+    width: 100%;
+    border-radius: 20px;
+}
+.btn4{
+    
+    font-size: 20px;
+    padding: 5px;
+    border-radius: 10px;
+    padding-right: 15px;
+    padding-left: 15px;
+    background-color: chocolate;
+    font-weight: bold;
+    
+}
+.btn4:hover{
+    background-color: gold;
+}
+.last {
+    color:darkcyan;
+    text-align: center;
+    font-size: 20px;
+}
+.copy{
+    color: darkmagenta;
+}
+.rak{
+    color: darkgoldenrod;
+}
+.cv  {
+    text-align: center;
+}
+button{
+    font-size: 20px;
+    padding: 10px;
+    background-color: chocolate;
+}
+button:hover{
+    background-color: darkgoldenrod;
+}
